@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Oxref V 1.00.05</title>
+<title>Oxref V 1.00.06</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Oxref V 1.00.05</h1>
+<h1 id="title">Oxref V 1.00.06</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2012-2015</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.06">1.00.06</a>
+Dec 20, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.05">1.00.05</a>
 Dec 14, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.04">1.00.04</a>
@@ -40,9 +42,7 @@ Oct  6, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.03">1.00.03</a>
 Oct  3, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.02">1.00.02</a>
-Feb 12, 2015;
-        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.91.00">0.91.00</a>
-Jan 25, 2013.
+Feb 12, 2015.
         </ul>
     
 <p>
