@@ -36,6 +36,9 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
+        it() url(1.00.06)
+                (https://github.com/fbb-git/_project_/releases/tag/1.00.06)
+Dec 20, 2015;
         it() url(1.00.05)
                 (https://github.com/fbb-git/_project_/releases/tag/1.00.05)
 Dec 14, 2015;
@@ -47,10 +50,7 @@ Oct  6, 2015;
 Oct  3, 2015;
         it() url(1.00.02)
                 (https://github.com/fbb-git/_project_/releases/tag/1.00.02)
-Feb 12, 2015;
-        it() url(0.91.00)
-                (https://github.com/fbb-git/_project_/releases/tag/0.91.00)
-Jan 25, 2013.
+Feb 12, 2015.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
