@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">oxref</h1>
-<h2 id="author">oxref.1.00.05.tar.gz</h2>
+<h2 id="author">oxref.1.00.06.tar.gz</h2>
 <h2 id="date">2012-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">oxref(1)</h1>
-<h2 id="author">oxref.1.00.05.tar.gz oxref - cross reference utility</h2>
+<h2 id="author">oxref.1.00.06.tar.gz oxref - cross reference utility</h2>
 <h2 id="date">2012-2015</h2>
 
 
