@@ -1,3 +1,9 @@
+oxref (1.00.06)
+
+  * Updated entries in the 'required' file.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Dec 2015 13:02:43 +0100
+
 oxref (1.00.05)
 
   * Updated the icmake build scripts to icmake 8.00.04
